apps/mattermost/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mattermost
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`chat.ramoneees.com`)
      kind: Rule
      services:
        - name: mattermost-team-edition
          port: 8065
  tls:
    secretName: wildcard-ramoneees-com-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mattermost-websocket
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`chat.ramoneees.com`) && PathPrefix(`/api/v4/websocket`)
      kind: Rule
      services:
        - name: mattermost-team-edition
          port: 8065
  tls:
    secretName: wildcard-ramoneees-com-tls
